Issue #23: try to avoid Qt warning 'QLocalSocket::waitForDisconnected() is not allowed in UnconnectedState' which should be removed... cf https://bugreports.qt.io/browse/QTBUG-50711 or https://stackoverflow.com/questions/34256290/does-qabstractsocketwaitfordisconnected-impose-a-race-condition

Former-commit-id: 9a140613d21034d36029b32e0d1ce280a7129f45
Former-commit-id: c16e7be2829093abd2969e97057a6f32e14707fb